--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 asyncio_default_fixture_loop_scope = function
-markers = smoker: these are smoke tests
+markers = smoke: these are smoke tests
